objects/Stage__c.object
<CustomObject>
    <fields>
        <fullName>Closed_Lost_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is stage closed or lost</description>
        <label>Closed Lost Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playbook__c</fullName>
        <description>associated playbook</description>
        <label>Playbook</label>
        <referenceTo>Playbook__c</referenceTo>
        <relationshipLabel>Stages</relationshipLabel>
        <relationshipName>Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage_Sort_Order__c</fullName>
        <description>stage sort order</description>
        <label>Stage Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stage</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>